# alextym.com

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README.ru.md  SESSION_NOTES.md  Taskfile.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: analytics.py  chat.py  contact.py  escalation.py  health.py  rate_limit.py  sse.py  telegram.py
backend/app/core/: confidence.py  config.py  domain_metrics.py  logging.py  loki.py  metrics.py  project_config.py
backend/app/llm/: __init__.py  client.py  factory.py  openai_client.py
backend/app/middleware/: request_context.py
backend/app/rag/: __init__.py  chunker.py  context_formatter.py  factory.py  keyword_scoring.py  knowledge_base.py  models.py  prompt_builder.py  public_resume_source.py  qdrant_retriever.py  qdrant_store.py  query_router.py  resume_rag_source.py  retriever.py  structured_knowledge.py  vector_config.py
backend/app/repositories/: escalation_session_store.py  upstash_escalation_session_store.py
backend/app/schemas/: analytics.py  chat.py  contact.py  escalation.py  health.py  sse.py  telegram.py
backend/evals/: chat_eval_cases.json  chat_eval_cases_generated_rag.json  retrieval_eval_cases_generated_rag.json
backend/knowledge/: README.md  resume.md
backend/scripts/: README.md  compare_eval_reports.py  extract_resume_rag_source.py  ingest_generated_resume_chunks.py  ingest_knowledge.py  run_chat_eval_cycle.py  run_chat_evals.py  run_retrieval_evals.py
backend/tests/: chat_expected_responses.py  conftest.py  telegram_webhook_helpers.py  test_chat.py  test_chat_eval_cycle.py  test_chat_eval_runner.py  test_chat_follow_up_routing.py  test_chat_handoff_intent.py  test_chat_language.py  test_chat_out_of_scope.py  test_chat_policy.py  test_chat_prompt_injection.py  test_chat_real_streaming.py  test_chat_right_to_work.py  test_chat_stream_endpoint.py  test_chat_validation.py  test_compare_eval_reports.py  test_config.py  test_contact.py  test_context_formatter.py  test_domain_metrics.py  test_escalation.py  test_escalation_session_state.py  test_escalation_stream.py  test_escalation_telegram_operator.py  test_generated_rag_eval_cases.py  test_grafana_logs_dashboard_config.py  test_handoff_availability.py  test_health.py  test_heuristic_reranking.py  test_hybrid_scoring.py  test_keyword_scoring.py  test_logging_foundation.py  test_loki_log_exporter.py  test_metrics_foundation.py  test_named_vector_ingestion.py  test_named_vector_ingestion_entrypoint.py  test_named_vector_store.py  test_observability_lab_configs.py  test_privacy_safe_analytics.py  (+19 more)
(+126 files in other folders)
