[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "alextym-backend"
version = "0.1.0"
description = "FastAPI backend for alextym."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1,<1.0",
    "openai>=2.44.0,<3.0",
    "prometheus-client>=0.23,<1.0",
    "prometheus-fastapi-instrumentator>=8.0.2,<9.0",
    "qdrant-client>=1.16,<2.0",
    "resend>=2.32.2,<3.0",
    "structlog>=26.1.0,<27.0",
    "tzdata>=2025.2",
    "uvicorn[standard]>=0.49.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=9.1.1,<10.0",
    "ruff>=0.15.20,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
